# ring_io

./: .rustfmt.toml  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: tcp_copy.rs  tcp_splice_copy.rs
futures_ring/: Cargo.toml
futures_ring/src/: buffer.rs  callback.rs  driver.rs  driver_resource.rs  helper.rs  lib.rs  owned_ring.rs  reactor.rs
futures_ring/src/operation/: accept.rs  connect.rs  mod.rs  nop.rs  open.rs  read.rs  timeout.rs  write.rs
futures_uring/: Cargo.toml
futures_uring/src/: buffer.rs  callback.rs  cqe_ext.rs  driver.rs  helper.rs  lib.rs  reactor.rs
futures_uring/src/operation/: connect.rs  fsync.rs  mod.rs  open.rs  recv.rs  rename.rs  send.rs  shutdown.rs  write.rs
src/: buffer.rs  cqe_ext.rs  driver.rs  event.rs  ext.rs  lib.rs  nix_error.rs  op.rs  open_options.rs  operation.rs  owned_ring.rs  ring.rs  runtime.rs  state.rs  thread_pool.rs
src/buf/: io_buf.rs  io_buf_mut.rs  mod.rs  ring_buffer.rs  slice.rs
src/drive/: default_driver.rs  demo.rs  event.rs  mod.rs
src/file_descriptor/: mod.rs
src/fs/: buffer.rs  copy.rs  file.rs  metadata.rs  mod.rs  open.rs  open_options.rs  remove.rs  rename.rs
src/io/: buffer.rs  mod.rs  read_half.rs  ring_fd.rs  splice.rs  stdio.rs  write_all.rs  write_half.rs
src/net/: mod.rs  peek.rs  shutdown.rs  socket.rs  udp.rs
src/net/tcp/: listener.rs  mod.rs  stream.rs  tcp_listener.rs  tcp_stream.rs
src/net/udp/: mod.rs  socket.rs
src/opcode/: accept.rs  close.rs  connect.rs  mod.rs  open.rs  read.rs  read_with_buf_ring.rs  read_with_ring_buf.rs  recv.rs  recv_from.rs  recv_multi.rs  recv_with_buf_ring.rs  send.rs  send_to.rs  shutdown.rs  write.rs
src/per_thread/: driver.rs  mod.rs  runtime.rs
src/time/: interval.rs  mod.rs  sleep.rs  timeout.rs
testdata/: book.txt
