[package]
name = "ring_io"
version = "0.2.0"
authors = ["Sherlock Holo <sherlockya@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "futures_uring"
]

[dependencies]
futures-util = { version = "0.3", default-features = false, features = ["io"] }
io-uring = { version = "0.5", features = ["unstable"] }
nix = "0.22"
libc = "0.2"
async-task = "4.0"
crossbeam-channel = "0.5"
once_cell = "1"
pin-project-lite = "0.2"
parking_lot = "0.11"

[dev-dependencies]
futures-util = { version = "0.3", features = ["io", "bilock", "unstable"], default-features = false }
tempfile = "3.2"
futures-timer = "3.0"
futures-channel = { version = "0.3", features = ["sink"] }

[[example]]
name = "tcp_copy"
path = "examples/tcp_copy.rs"

[[example]]
name = "tcp_splice_copy"
path = "examples/tcp_splice_copy.rs"
