[package]
name = "ring_io"
version = "0.3.0"
authors = ["Sherlock Holo <sherlockya@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = { version = "0.3", default-features = false }
io-uring = "0.6"
libc = "0.2"
async-task = "4.0"
flume = "0.10"
bytes = "1"
socket2 = "0.5"
slab = "0.4"
rayon = "1"

[dev-dependencies]
futures-util = { version = "0.3", default-features = false }
tempfile = "3.2"
futures-timer = "3.0"
