[package]
name = "futures_uring"
version = "0.1.0"
edition = "2018"
authors = ["Sherlock Holo <sherlockya@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
io-uring = { version = "0.5", features = ["unstable"] }
nix = "0.22"
libc = "0.2"
parking_lot = "0.11"
bytes = "1.1"
futures-core = { version = "0.3", default-features = false }

[dev-dependencies]
futures-util = { version = "0.3", default-features = false }
futures-task = "0.3"
tempfile = "3.2"
